# golf-model

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  GolfBetting.xlsx  README.md  _bet_comparison_backup.html  archive.html  betting_analytics.html  course_details.html  course_history_summary.json  datagolf_client.py  dg_cache.sqlite  euro.html  euro_schedule.html  event_archive.html  field_teetimes.csv  fixes.md  github_deploy.sh  historical_tournament_data.jaon  historical_tournament_data.json  index.html  leaderboard.json  links.html  menu.html  menu.js  meta.json  notes.html  pga.html  pga_schedule.html  pyproject.toml  roi.html  schedule.html  spreadsheet.html  spreadsheet_data.csv  spreadsheet_data.xlsx  summary.json  test_datagolf.py  theme.css  upcoming-events.json  (+3 more)
.codex/: PROJECT_CONTEXT.md
archive/: index.json  results_summary.json
configs/: datagolf.yaml  event_rules.yaml  experiments.yaml  simulator.yaml
docs/: automation.md  page_model_roadmap.md
downloads/: event_457_world_wide_technology_championship_2025-11-05_leaderboard.html  event_528_butterfield_bermuda_championship_2025-11-10_leaderboard.html  event_9_arnold_palmer_invitational_presented_by_mastercard_2025-11-06_leaderboard.csv
euro/: course_fit_weights.json  course_history_summary.json  field_teetimes.csv  leaderboard.json  meta.json  schedule.json  summary.json  tournament_summary.json  weather_meta.json  weather_round_neutral.json  weather_round_wave.json
pga/: course_fit_weights.json  course_history_summary.json  field_teetimes.csv  leaderboard.json  meta.json  schedule.html  (+6 more)
(+2177 files in other folders)
